# medfuelapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/clinical_evidence/: README.md  __init__.py  config.py  db.py  models.py  router.py  schemas.py
backend/clinical_evidence/api/: __init__.py  citations.py  extract.py  generate.py  ingest.py  layout.py  pdf.py  run.py  runner.py  signal_rank.py  verify.py
backend/clinical_evidence/citations/: __init__.py  builder.py
backend/clinical_evidence/discovery/: __init__.py  _http.py  clinicaltrials.py  ema.py  fda.py  orchestrator.py  pubmed.py  sec.py  tavily.py
backend/clinical_evidence/extraction/: __init__.py  client.py  prompts.py  runner.py
backend/clinical_evidence/ingestion/: __init__.py  firecrawl.py  normalizer.py  pdf.py
backend/clinical_evidence/layout/: __init__.py  composer.py  page_budget.py
backend/clinical_evidence/migrations/: 0001_init_ce.py
backend/clinical_evidence/narrative/: __init__.py  claude_client.py  generator.py
backend/clinical_evidence/narrative/prompts/: __init__.py
backend/clinical_evidence/signal/: __init__.py  filter.py  risk.py  rules.py  scorer.py
backend/clinical_evidence/tests/: test_fluff_rules.py  test_page_budget.py  test_pipeline_e2e.py  test_signal_scorer.py
backend/clinical_evidence/tests/fixtures/: __init__.py
backend/clinical_evidence/verification/: __init__.py  confidence.py  crosscheck.py
backend/host_harness/: main.py
docs/: regulatory-framework-spec.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
policies/: supabase.sql
src/medfuel/: __init__.py  config.py  main.py
tests/: conftest.py  test_api.py  test_chunking_and_embeddings.py  test_end_to_end.py  test_http_client.py  test_invariants.py  test_job_recovery.py  test_llm_extractor.py  test_narrative_usage.py  test_narrator_fallback.py  test_noise.py  test_normalize_dedupe.py  test_observability.py  test_pipeline.py  test_redaction.py  test_registry.py  test_regression_gold.py  test_report_api.py  test_rules_extractor.py  test_schemas.py  test_signal_and_layout.py
tests/adapters/: test_clinicaltrials.py  test_ema.py  test_fda.py  test_firecrawl_adapters.py  test_ncbi.py  test_sec.py  (+1 more)
(+127 files in other folders)
