[project]
name = "medfuel"
version = "0.1.0"
description = "MedFuel regulatory intelligence pipeline (Phase 1: connectors)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]
# Real LLM providers are optional: the deterministic stub keeps the pipeline
# working without external SDKs. Install when MEDFUEL_USE_LLM=1.
llm = [
    "openai>=1.40",
    "anthropic>=0.34",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "UP042"]  # UP042: keep `str, Enum` for JSON-serializable enums.

[tool.ruff.lint.per-file-ignores]
# FastAPI uses `Depends()` as default value by design.
"src/medfuel/api/*.py" = ["B008"]
